--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,11 @@ include_directories(/usr/local/include /opt/homebrew/include include)
 add_executable(main
         src/main.c
         src/convert.c
+        src/config.c
+        src/query.c
 )
 target_link_libraries(main)
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fdiagnostics-color=always")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fdiagnostics-color=always")
+
