成功添加缓存功能

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,10 @@ add_executable(main
         src/convert.c
         src/config.c
         src/query.c
+        src/tools.c
+        src/bufferpool.c
+        src/bp-doublelist.c
+        src/bp-hashtable.c
 )
 target_link_libraries(main)
 
