修改并拆分dns_run()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ include_directories(/usr/local/include /opt/homebrew/include include)
 
 add_executable(main
         src/main.c
+        src/struct.c
         src/convert.c
         src/config.c
         src/query.c
