--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,11 @@ add_executable(main
         src/config.c
         src/query.c
         src/tools.c
-        src/bufferpool.c
         src/bp-doublelist.c
         src/bp-hashtable.c
+        src/bufferpool.c
+        src/pmhashtable.c
+        src/portmap.c
 )
 target_link_libraries(main)
 
